--- a/app/src/main/res/layout/fragment_shouye.xml
+++ b/app/src/main/res/layout/fragment_shouye.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.administrator.youhuo.view.PullToRelashLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#fff"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</com.example.administrator.youhuo.view.PullToRelashLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="我是导航" />
+    </LinearLayout>
+
+    <com.example.administrator.youhuo.view.PullToRelashLayout
+        android:id="@+id/relash"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.example.administrator.youhuo.view.PullToRelashLayout>
+</LinearLayout>
