--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="statusBarSize">25dp</dimen>
     <dimen name="headAndFooterSize">25dp</dimen>
+    <dimen name="itemHomeBarndTextSize">18sp</dimen>
 </resources>
